--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,12 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
-        "fruitcake/laravel-cors": "^2.0.5",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.0",
+        "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.7",
+        "laravel/framework": "^10.13",
         "laravel/horizon": "^5.21",
-        "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7",
+        "laravel/sanctum": "^3.2",
+        "laravel/tinker": "^2.8",
         "mailerlite/laravel-elasticsearch": "^11.0",
         "predis/predis": "^2.2"
     },
@@ -19,9 +18,9 @@
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.25",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.4.2",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -61,6 +60,6 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
